# routes/DRSDetails_routes.js
@@ -1,6 +1,6 @@
 const express = require("express")
 
-const {createDRSDetails,getDRSDetails,deleteDRSDetails} =require("../controller/DRSDetails_controller")
+const {createDRSDetails,getDRSDetails,deleteDRSDetails,getSingleDRSDetails,updateDRSDetails} =require("../controller/DRSDetails_controller")
 
 const router = express.Router()
 
@@ -10,9 +10,14 @@ router.route("/createDRSDetails").post(createDRSDetails)
 router.route("/getDRSDetails").get(getDRSDetails)
 // @url => http://192.168.43.220:5000/api/v1/DRS/getDRSDetails
 // @method => GET
-router.route("/deleteDRSDetails").delete(deleteDRSDetails)
+router.route("/deleteDRSDetails/:id").delete(deleteDRSDetails)
 // @url => http://192.168.43.220:5000/api/v1/DRS/deleteDRSDetails
 // @method => DELETE
-
+router.route("/updateDRSDetails/:id").put(updateDRSDetails)
+// route http://192.168.43.220:5000/api/v1/updateDRSDetails
+//method put
+router.route("/getSingleDRSDetails/:id").get(getSingleDRSDetails)
+// route http://192.168.43.220:5000/api/v1/getSingleDRSDetails
+//method get
 
 module.exports = router
